configuration/kubernetes/gateway/account-api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fsb-api-gateway
  namespace: default

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: account
                port:
                  number: 8080
