configuration/kubernetes/gateway/order-api-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-gateway
  namespace: default

spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8080
